Fixed tooltip cutoff issue

--- a/public/stylesheets/ie6-7.css
+++ b/public/stylesheets/ie6-7.css
@@ -110,6 +110,12 @@
   margin-right: 20px;
 }
  
+.tooltip,
+.tooltip div,
+.tooltip li {
+  zoom: 1;
+}
+ 
 /***
   2. Typography
 ***/
